--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -119,6 +119,7 @@ flutter:
       - assets/icons/delete_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png
       - assets/icons/ac_unit_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png
       - assets/icons/enable_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png
+      - assets/adb.png
       
   fonts:
     - family: OPPOSans
