ui: 调整未连接时UI，添加问候语

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -129,3 +129,8 @@ flutter:
     - family: MiSansLight
       fonts:
         - asset: assets/fonts/MiSans-Light.ttf
+
+    - family: OPPOSansMed
+      fonts:
+        - asset: assets/fonts/OPPOSans-Medium.ttf
+
