feat: 增加安装驱动教程

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,10 @@ flutter:
       - assets/icons/ac_unit_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png
       - assets/icons/enable_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png
       - assets/adb.png
+      - assets/driver/0.png
+      - assets/driver/1.png
+      - assets/driver/2.png
+      - assets/driver/3.png
       
   fonts:
     - family: OPPOSans
