--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^6.1.7
   file_picker: ^5.0.0
   desktop_drop: ^0.1.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
